deployment/4-kubernetes/judge/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: judge
  labels:
    app: judge
spec:
  replicas: 2
  selector:
    matchLabels:
      app: judge
  template:
    metadata:
      labels:
        app: judge
    spec:
      containers:
        - name: judge
          image: excellentia-judge
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
