deployment/4-kubernetes/judge/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: judge-service
  namespace: excellentia
  labels:
    app: judge
spec:
  selector:
      app: judge
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8080
  type: ClusterIP
